<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bluetoothConnected"
        android:icon="@drawable/ic_baseline_bluetooth_connected_24"
        android:title="Search"
        app:showAsAction="always" />


    <item
        android:id="@+id/back"
        android:icon="@drawable/ic_baseline_arrow_back_24"
        android:title="@string/menu_cancelHive"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_logout"
        android:icon="@drawable/ic_menu_logout"
        android:title="@string/menu_logout"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/aboutus"
        android:icon="@drawable/ic_menu_aboutus"
        android:title="@string/action_about"
        android:visible="true"
        app:showAsAction="ifRoom" />

</menu>