<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bluetooth"
        android:icon="@android:drawable/stat_sys_data_bluetooth"
        android:title="scan"
        android:visible="false"
        app:showAsAction="always"
        android:iconTint="@color/black"/>

    <item
        android:id="@+id/item_chart"
        android:icon="@drawable/ic_baseline_area_chart_24"
        android:title="chart"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menu_saveHive"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_delete"
        android:icon="@drawable/ic_swipe_delete"
        android:title="@string/menu_deleteHive"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_cancel"
        android:icon="@drawable/ic_baseline_arrow_back_24"
        android:title="@string/menu_cancelHive"
        app:showAsAction="always" />
</menu>